GNOME Bugzilla – Bug 785407
audioconvert: Concider channel=1, channel-mask=0x0 as mono
Last modified: 2017-07-26 13:35:39 UTC
See commit message.
Created attachment 356371 [details] [review] audioconvert: Concider channel=1, channel-mask=0x0 as mono channels=1 is always mono, having it 'unpositioned' does not make sense. This fixes pipeline such as: gst-validate-1.0 audiotestsrc ! audio/x-raw,channels=2,rate=44100,layout=interleaved ! audioconvert ! audioresample ! audio/x-raw, rate=44100, channels=1 ! avenc_mp2 ! fakesink
Created attachment 356372 [details] [review] Since V1: - Minor fix in commit message
Comment on attachment 356372 [details] [review] Since V1: Might also want to add that case to gst_audio_info_from_caps()
> Might also want to add that case to gst_audio_info_from_caps() It is already handled there: if (!gst_structure_get (str, "channel-mask", GST_TYPE_BITMASK, &channel_mask, NULL) || (channel_mask == 0 && channels == 1)) {